1er version a subir a Github

--- a/views/404.html
+++ b/views/404.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-    <h1>El Juanjo API</h1>
+    <h1>My Fav Videos API</h1>
     <p>La página solicitada no existe!!</p>
 </body>
 
