--- a/views/emails/baseEmail.pug
+++ b/views/emails/baseEmail.pug
@@ -41,7 +41,7 @@ html
                   tbody
                     tr
                       td.content-block
-                        span.apple-link El Juanjo | Dulcería
+                        span.apple-link My Fav Videos
                         br
                         //- |  Don't like these emails? 
                         //- a(href='#') Unsubscribe
