--- a/views/emails/welcome.pug
+++ b/views/emails/welcome.pug
@@ -5,8 +5,8 @@ block content
   //- email.js en el metodo async send(template, subject) cuando uso el metodo
   //- pug.renderFile (....)
   p Hi #{firstName},
-  p Welcome to Natours, we're glad to have you 🎉🙏
-  p We're all a big familiy here, so make sure to upload your user photo so we get to know you a bit better!
+  p Bienvenido a My Fav Videos, es un gusto tenerte con nosotros 🎉🙏
+  p Queremos conocerte mejor así que con confianza sube tu foto en la página de Configurar Perfil!
   table.btn.btn-primary(role='presentation', border='0', cellpadding='0', cellspacing='0')
     tbody
       tr
@@ -15,6 +15,6 @@ block content
             tbody
               tr
                 td
-                  a(href=`${url}`, target='_blank') Upload user photo
-  p If you need any help with booking your next tour, please don't hesitate to contact me!
-  p - Jonas Schmedtmann, CEO
+                  a(href=`${url}`, target='_blank') Sube tu foto
+  p Si tienes alguna duda o sugerencia en como usar la página, contáctame!!!
+  p - Abdel Yussuf
