--- a/views/index.html
+++ b/views/index.html
@@ -5,12 +5,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>El Juanjo API</title>
+    <title>My Fav Videos API</title>
     <link rel="stylesheet" href="css/style.css" />
 </head>
 
 <body>
-    <h1>El Juanjo Dulceria API</h1>
+    <h1>My Fav Videos API</h1>
 </body>
 
 </html>
